--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "core-js": "^3.8.0",
+    "lib-flexible": "^0.3.2",
+    "vant": "^2.11.1",
     "vue": "^2.6.12",
     "vue-router": "^3.4.9",
     "vuex": "^3.6.0"
@@ -24,7 +27,10 @@
     "eslint": "^6.8.0",
     "eslint-plugin-prettier": "^3.2.0",
     "eslint-plugin-vue": "^6.2.2",
+    "node-sass": "^5.0.0",
+    "postcss-px2rem": "^0.3.0",
     "prettier": "^1.19.1",
+    "sass-loader": "^10.1.0",
     "vue-template-compiler": "^2.6.12"
   },
   "eslintConfig": {
